fix overflowing article titles

--- a/website/assets/styles/pages/articles/articles.less
+++ b/website/assets/styles/pages/articles/articles.less
@@ -65,6 +65,7 @@
       }
       [purpose='article-card-body'] {
         padding: 24px 24px 32px 24px;
+        height: auto;
         [purpose='category-name'] {
           text-transform: uppercase;
           color: @core-fleet-black-50;
@@ -188,7 +189,7 @@
       margin-left: -10px;
       margin-right: -10px;
       [purpose='article-card'] {
-        flex: 1 1 350px;
+        flex: 1 1 auto;
         max-width: 100%;
       }
     }
